Add some standard rules for formatting
